[package]
name = "libenchcrack"
description = "Code for cracking minecraft's XP seed"
version = "0.1.0"
authors = ["ImUrX <urielfontan2002@gmail.com>"]
repository = "https://github.com/ImUrX/libenchcrack"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"
wee_alloc = "0.4.5"
js-sys = "0.3.44"
java-rand = "0.2.0"
enum-map = "0.6.3"
strum = "0.19.2"
strum_macros = "0.19.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
web-sys = { version = "0.3.44", features = ["console"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
