[package]
name = "libenchcrack"
description = "Code for cracking minecraft's XP seed"
version = "0.2.0"
authors = ["ImUrX <urielfontan2002@gmail.com>"]
repository = "https://github.com/ImUrX/libenchcrack"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.75"
wee_alloc = "0.4.5"
js-sys = "0.3.52"
java-rand = "0.2.0"
enum-map = "0.6.4"
strum = "0.21.0"
strum_macros = "0.21.1"
rayon = { version = "1.5.1", optional = true }
wasm-bindgen-rayon = { version = "1.0.3", optional = true, features = ["no-bundler"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.25"
web-sys = { version = "0.3.52", features = ["console"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[features]
threads = ["rayon", "wasm-bindgen-rayon"]
