[package]
name = "libenchcrack"
description = "Code for cracking minecraft's XP seed"
version = "1.0.0"
authors = ["ImUrX <urielfontan2002@gmail.com>"]
repository = "https://github.com/ImUrX/libenchcrack"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"
js-sys = "0.3.57"
java-rand = "0.2.0"
enum-map = "2.1.0"
strum = "0.24"
strum_macros = "0.24"
rayon = { version = "1.5", optional = true }
wasm-bindgen-rayon = { version = "1.0", optional = true, features = ["no-bundler"] }
atomic-counter = { version = "1.0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
web-sys = { version = "0.3.57", features = ["console"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

[features]
threads = ["rayon", "wasm-bindgen-rayon", "atomic-counter"]
